[gd_scene load_steps=5 format=1]

[ext_resource path="res://maintes.gd" type="Script" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://panel.gd" type="Script" id=4]

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 370.0
margin/bottom = 300.0
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Control"]

transform/pos = Vector2( 752, 342 )
texture = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 810.0
margin/top = 100.0
margin/right = 874.0
margin/bottom = 164.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 601.0
margin/top = 41.0
margin/right = 708.0
margin/bottom = 62.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 806.0
margin/top = 519.0
margin/right = 972.0
margin/bottom = 533.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 3" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 829.0
margin/top = 524.0
margin/right = 939.0
margin/bottom = 550.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 267.0
margin/top = 199.0
margin/right = 688.0
margin/bottom = 523.0
script/script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[connection signal="input_event" from="Control" to="Control" method="_on_Control_input_event"]

[connection signal="mouse_enter" from="Control" to="Control" method="_on_Control_mouse_enter"]

[connection signal="button_down" from="Control/TextureButton" to="Control" method="_on_TextureButton_button_down"]

[connection signal="timeout" from="Timer" to="Control" method="_on_Timer_timeout"]


